# simple-python-rust-project

./: pyproject.toml  requirements-build.txt  requirements.txt
